modules/me/menu_per_role/1.9.x/agent/api/menu_per_role.md
<!-- SPDX-License-Identifier: GPL-2.0-or-later -->
# API / internals — Menu Per Role

The module exposes no `.api.php` hooks and no services meant to be called directly. It
extends behavior through two mechanisms plus base fields you can set programmatically.

## Base fields on `menu_link_content`

Added via `hook_entity_base_field_info()` in `menu_per_role.module` (only for the
`menu_link_content` entity type), both `entity_reference` → `user_role`, cardinality
unlimited, widget `options_buttons`:

- `menu_per_role__show_role` — "Roles able to see the menu link"
- `menu_per_role__hide_role` — "Roles not able see the menu link."

`menu_per_role_form_menu_link_content_form_alter()` sets `#access = FALSE` on either field
according to the `hide_show` / `hide_on_content` settings (see configure doc).

Set them programmatically on a `MenuLinkContent` entity:

```php
$link = \Drupal\menu_link_content\Entity\MenuLinkContent::create([
  'title' => 'Members area',
  'link' => ['uri' => 'internal:/members'],
  'menu_name' => 'main',
  'menu_per_role__show_role' => [['target_id' => 'member']],
  'menu_per_role__hide_role' => [['target_id' => 'anonymous']],
]);
$link->save();
```

Read: `$link->menu_per_role__show_role->getValue()` → array of `['target_id' => <role_id>]`.

## Access enforcement (decorator)

`menu_per_role.services.yml` decorates the core service `menu.default_tree_manipulators`
with `MenuPerRoleLinkTreeManipulator` (extends `DefaultMenuLinkTreeManipulators`), injecting
`@router.admin_context` (via `setAdminContext`) and `@config.factory` (via `setConfigFactory`).
The service is `public: false`.

Its `menuLinkCheckAccess()`:
1. Runs `parent::menuLinkCheckAccess()`.
2. If `bypassAccessCheck()` (admin config / bypass permissions — see permissions doc) →
   returns the parent result without adding restrictions.
3. For `MenuLinkContent` instances, reads the two fields and `andIf(AccessResult::forbidden())`
   when: a "show" set exists and the account shares none of those roles (`array_intersect(...) == 0`),
   OR a "hide" role intersects the account's roles (`array_intersect(...) > 0`).

Because access is combined with `andIf`, Menu Per Role can only further restrict a link; it
never grants access the link wouldn't otherwise have. The check governs menu-link
**visibility** only — it does not add access control to the link's destination route/page
(a hidden link's target URL remains reachable unless separately protected).

## Cache

- The forbidden restriction branches add cache context `user.roles`.
- The bypass branch references contexts `user.is_super_user` and `route.is_admin`.
- The module ships a custom cache context service `cache_context.route.is_admin`
  (`RouteIsAdminCacheContext`, id `route.is_admin`) wrapping `@router.admin_context`, so
  front vs admin filtering can cache separately.

## Scope limitation

Only content menu links (`menu_link_content`) are affected. Links defined in configuration
(e.g. Views) or in `*.links.menu.yml` cannot be restricted by this module (per
`hook_help()` and README).
